# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: application.h  camera.h  config.h  dielectric.h  hittable.h  hittable_list.h  image.h  lambertian.h  layer.h  material.h  metal.h  ray.h  scene.h  sphere.h  utils.h
src/: application.cc  camera.cc  dielectric.cc  entry_point.cc  hittable_list.cc  image.cc  lambertian.cc  metal.cc  ray.cc  scene.cc  sphere.cc  utils.cc
